samples/negative/05_parse_error_missing_end.pas
program n05;
var
  x: integer;
begin
  x := 1;
